Simular exclusão de personagens

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <div class="item" v-for="item of characters">
                 <img :src="item.avatar" :alt="item.name">
                 <p>{{ item.name }}</p>
+
                 <button @click="like(item.name)">Like</button>
+                <button @click="remove(item.id)">Remove</button>
             </div>
         </div>
 
