--- a/index.html
+++ b/index.html
@@ -3,30 +3,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Wars</title>
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Handlee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap">
 </head>
 <body>
     <div id="app">
-        <h1>{{ title }}</h1>
-        <small>Olá, {{ userName }}</small>
+        <div class="top">
+            <div>
+                <h1>{{ title }}</h1>
+                <small>Olá, {{ userName }}</small>
+            </div>
 
-        <form>
-            <input placeholder="Pesquise por nome..." v-model="searchName"/>
-            <button type="button" @click="search()">Pesquisar</button>
-        </form>
-
-
+            <form>
+                <input placeholder="Pesquise por nome..." v-model="searchName"/>
+                <button type="button" @click="search()">Pesquisar</button>
+            </form>
+        </div>
+        
         <div class="characters">
             <div class="item" v-for="item of characters">
                 <img :src="item.avatar" :alt="item.name">
                 <p>{{ item.name }}</p>
-
-                <button @click="like(item.name)">Like</button>
-                <button @click="remove(item.id)">Remove</button>
+                <span @click="like(item.name)" class="like material-symbols-outlined">
+                    favorite
+                </span>
+                <span @click="remove(item.id)" class="delete material-symbols-outlined">
+                    delete
+                </span>
             </div>
         </div>
 
+        <div id="custom-alert" v-if="showCustomAlert">
+            <div class="alert-box">
+                <p>{{ customAlertMessage }}</p>
+                <button @click="closeAlert">Fechar</button>
+            </div>
+        </div>
     </div>
+
     <script type="text/javascript" src="js/vue.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
